--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,24 @@
 
-
 div.menu{
+	position: relative;
+	left: 20px;
+	top: 20px;
+	height: 0;
+}
+
+div.menu .fixed{
 	position: fixed;
-	top: 180px;
+	top: 20px;
 	left: 20px;
 }
 
 div.menu a{
 	display: block;
+}
+
+@media (max-width:820px) {
+	
+	.inner{
+		padding-left: 80px;
+	}
 }
